# Arduino-Pedelec-Controller

./: .gitignore  CMakeLists.txt
Arduino_Pedelec_Controller/: Arduino_Pedelec_Controller.ino  CMakeLists.txt  VescUart.h  config.h  display.cpp  globals.h  main.cpp  switches.cpp  switches_action.h
Arduino_Pedelec_Controller/Display/: Adafruit_GFX.cpp  Adafruit_GFX.h  BaseComponent.h  BaseView.h  Components.cpp  Components.h  DataModel.cpp  DataModel.h  DiagramComponent.cpp  DiagramComponent.h  DisplayController.cpp  DisplayController.h  IconComponent.cpp  IconComponent.h  MainView.cpp  MainView.h  MainViewEdit.cpp  MenuEntries.cpp  MenuEntries.h  MenuView.cpp  MenuView.h  RotaryEncoder.cpp  SeparatorComponent.cpp  TextComponent.cpp  TextComponent.h  TimeComponent.cpp  defines.h
Arduino_Pedelec_Controller/VESC/: buffer.cpp  crc.cpp  datatypes.h  vesc_uart.cpp  vesc_uart.h
Hardware_Test/: CMakeLists.txt  Hardware_Test.ino  PCD8544_nano.h  main.cpp
Hardware_Test/VESC/: datatypes.h  vesc_uart.cpp  vesc_uart.h
cmake/: ArduinoToolchain.cmake  Teensy.cmake  teensy-arm.toolchain.cmake
cmake/Platform/: Arduino.cmake
cmake_arduino/: ArduinoToolchain.cmake
cmake_arduino/Platform/: Arduino.cmake
